--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -1,25 +1,34 @@
-minimum_cumulusci_version: '3.85.0'
+minimum_cumulusci_version: "3.85.0"
 project:
+  name: Food-Bank
+  package:
     name: Food-Bank
-    package:
-        name: Food-Bank
-        api_version: '60.0'
-    git:
-        default_branch: 'main'
-    source_format: sfdx
+    api_version: "60.0"
+  git:
+    default_branch: "main"
+  source_format: sfdx
 
 tasks:
-    robot:
-        options:
-            suites: robot/Food-Bank/tests
-            options:
-                outputdir: robot/Food-Bank/results
+  robot:
+    options:
+      suites: robot/Food-Bank/tests
+      options:
+        outputdir: robot/Food-Bank/results
 
-    robot_testdoc:
-        options:
-            path: robot/Food-Bank/tests
-            output: robot/Food-Bank/doc/Food-Bank_tests.html
+  robot_testdoc:
+    options:
+      path: robot/Food-Bank/tests
+      output: robot/Food-Bank/doc/Food-Bank_tests.html
 
-    run_tests:
-        options:
-            required_org_code_coverage_percent: 75
+  run_tests:
+    options:
+      required_org_code_coverage_percent: 75
+flows:
+  config_qa:
+    steps:
+      3:
+        task: load_dataset
+  config_dev:
+    steps:
+      3:
+        task: load_dataset
