Set package namespace

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -4,6 +4,7 @@ project:
   package:
     name: Food-Bank
     api_version: "60.0"
+    namespace: fbvolapp
   git:
     default_branch: "main"
   source_format: sfdx
